--- a/src/ElSys/elsys.fxml
+++ b/src/ElSys/elsys.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.shape.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
@@ -7,8 +11,61 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="425.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ElSys.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" style="-fx-background-color: Gray;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ElSys.Controller">
    <children>
-      <BorderPane fx:id="pane" minHeight="900.0" minWidth="800.0" prefHeight="900.0" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="246.0" AnchorPane.topAnchor="0.0" />
+      <BorderPane fx:id="pane" minHeight="900.0" minWidth="760.0" prefHeight="900.0" prefWidth="761.0" style="-fx-background-color: White;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="330.0" AnchorPane.topAnchor="0.0" />
+      <SplitPane dividerPositions="0.5" layoutX="761.0" layoutY="-2.0" orientation="VERTICAL" prefHeight="611.0" prefWidth="246.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="761.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <items>
+          <AnchorPane minHeight="0.0" minWidth="325.0" prefHeight="100.0" prefWidth="160.0">
+               <children>
+                  <Button layoutX="62.0" layoutY="388.0" minWidth="50.0" mnemonicParsing="false" text="1" textFill="RED" />
+                  <Button layoutX="205.0" layoutY="303.0" minWidth="50.0" mnemonicParsing="false" text="6" textFill="RED" />
+                  <Button layoutX="62.0" layoutY="303.0" minWidth="50.0" mnemonicParsing="false" text="5" textFill="RED" />
+                  <Button layoutX="205.0" layoutY="347.0" minWidth="50.0" mnemonicParsing="false" text="4" textFill="RED" />
+                  <Button layoutX="62.0" layoutY="347.0" minWidth="50.0" mnemonicParsing="false" text="3" textFill="RED" />
+                  <Button layoutX="205.0" layoutY="388.0" minWidth="50.0" mnemonicParsing="false" text="2" textFill="RED" />
+                  <Button layoutX="62.0" layoutY="260.0" minWidth="50.0" mnemonicParsing="false" text="7">
+                     <textFill>
+                        <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
+                           <stops>
+                              <Stop color="RED" />
+                              <Stop color="RED" offset="1.0" />
+                           </stops>
+                        </RadialGradient>
+                     </textFill>
+                  </Button>
+                  <Button layoutX="205.0" layoutY="260.0" minWidth="50.0" mnemonicParsing="false" text="8" textFill="RED" />
+                  <Button layoutX="62.0" layoutY="217.0" minWidth="50.0" mnemonicParsing="false" text="9">
+                     <textFill>
+                        <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
+                           <stops>
+                              <Stop color="RED" />
+                              <Stop color="RED" offset="1.0" />
+                           </stops>
+                        </RadialGradient>
+                     </textFill>
+                  </Button>
+                  <Button layoutX="205.0" layoutY="217.0" minWidth="50.0" mnemonicParsing="false" text="7">
+                     <textFill>
+                        <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
+                           <stops>
+                              <Stop color="RED" />
+                              <Stop color="RED" offset="1.0" />
+                           </stops>
+                        </RadialGradient>
+                     </textFill>
+                  </Button>
+                  <Label layoutX="119.0" layoutY="6.0" text="Elevator Controls" />
+               </children>
+            </AnchorPane>
+          <AnchorPane minWidth="200.0" prefHeight="100.0" prefWidth="160.0">
+               <children>
+                  <ComboBox fx:id="elevatorCombo" layoutX="89.0" layoutY="52.0" prefWidth="150.0" promptText="Elevator" AnchorPane.topAnchor="52.0" />
+                  <Label layoutX="108.0" layoutY="14.0" text="Master Control Panel" />
+                  <Button layoutX="89.0" layoutY="127.0" minWidth="53.0" mnemonicParsing="false" text="Lock" />
+                  <Button layoutX="187.0" layoutY="127.0" minWidth="53.0" mnemonicParsing="false" text="Unlock" />
+               </children></AnchorPane>
+        </items>
+      </SplitPane>
    </children>
 </AnchorPane>
