--- a/src/ElSys/elsys.fxml
+++ b/src/ElSys/elsys.fxml
@@ -13,7 +13,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" style="-fx-background-color: Gray;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ElSys.Controller">
    <children>
-      <BorderPane fx:id="pane" minHeight="900.0" minWidth="760.0" prefHeight="900.0" prefWidth="761.0" style="-fx-background-color: White;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="330.0" AnchorPane.topAnchor="0.0" />
+      <BorderPane fx:id="buildingPane" minHeight="900.0" minWidth="760.0" prefHeight="900.0" prefWidth="761.0" style="-fx-background-color: White;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="330.0" AnchorPane.topAnchor="0.0" />
       <SplitPane dividerPositions="0.5" layoutX="761.0" layoutY="-2.0" orientation="VERTICAL" prefHeight="611.0" prefWidth="246.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="761.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
           <AnchorPane minHeight="0.0" minWidth="325.0" prefHeight="100.0" prefWidth="160.0">
@@ -56,6 +56,7 @@
                      </textFill>
                   </Button>
                   <Label layoutX="119.0" layoutY="6.0" text="Elevator Controls" />
+                  <AnchorPane fx:id="cabinPane" layoutX="23.0" layoutY="32.0" prefHeight="157.0" prefWidth="280.0" style="-fx-background-color: Black;" />
                </children>
             </AnchorPane>
           <AnchorPane minWidth="200.0" prefHeight="100.0" prefWidth="160.0">
