--- a/src/ElSys/elsys.fxml
+++ b/src/ElSys/elsys.fxml
@@ -16,47 +16,24 @@
       <BorderPane fx:id="buildingPane" minHeight="900.0" minWidth="760.0" prefHeight="900.0" prefWidth="761.0" style="-fx-background-color: White;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="330.0" AnchorPane.topAnchor="0.0" />
       <SplitPane dividerPositions="0.5" layoutX="761.0" layoutY="-2.0" orientation="VERTICAL" prefHeight="611.0" prefWidth="246.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="761.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
-          <AnchorPane minHeight="0.0" minWidth="325.0" prefHeight="100.0" prefWidth="160.0">
+          <AnchorPane minHeight="0.0" minWidth="325.0" prefHeight="100.0" prefWidth="160.0" style="-fx-background-color: gray;">
                <children>
-                  <Button layoutX="62.0" layoutY="388.0" minWidth="50.0" mnemonicParsing="false" text="1" textFill="RED" />
-                  <Button layoutX="205.0" layoutY="303.0" minWidth="50.0" mnemonicParsing="false" text="6" textFill="RED" />
-                  <Button layoutX="62.0" layoutY="303.0" minWidth="50.0" mnemonicParsing="false" text="5" textFill="RED" />
-                  <Button layoutX="205.0" layoutY="347.0" minWidth="50.0" mnemonicParsing="false" text="4" textFill="RED" />
-                  <Button layoutX="62.0" layoutY="347.0" minWidth="50.0" mnemonicParsing="false" text="3" textFill="RED" />
-                  <Button layoutX="205.0" layoutY="388.0" minWidth="50.0" mnemonicParsing="false" text="2" textFill="RED" />
-                  <Button layoutX="62.0" layoutY="260.0" minWidth="50.0" mnemonicParsing="false" text="7">
-                     <textFill>
-                        <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
-                           <stops>
-                              <Stop color="RED" />
-                              <Stop color="RED" offset="1.0" />
-                           </stops>
-                        </RadialGradient>
-                     </textFill>
-                  </Button>
-                  <Button layoutX="205.0" layoutY="260.0" minWidth="50.0" mnemonicParsing="false" text="8" textFill="RED" />
-                  <Button layoutX="62.0" layoutY="217.0" minWidth="50.0" mnemonicParsing="false" text="9">
-                     <textFill>
-                        <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
-                           <stops>
-                              <Stop color="RED" />
-                              <Stop color="RED" offset="1.0" />
-                           </stops>
-                        </RadialGradient>
-                     </textFill>
-                  </Button>
-                  <Button layoutX="205.0" layoutY="217.0" minWidth="50.0" mnemonicParsing="false" text="7">
-                     <textFill>
-                        <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
-                           <stops>
-                              <Stop color="RED" />
-                              <Stop color="RED" offset="1.0" />
-                           </stops>
-                        </RadialGradient>
-                     </textFill>
-                  </Button>
                   <Label layoutX="119.0" layoutY="6.0" text="Elevator Controls" />
                   <AnchorPane fx:id="cabinPane" layoutX="23.0" layoutY="32.0" prefHeight="157.0" prefWidth="280.0" style="-fx-background-color: Black;" />
+                  <AnchorPane layoutX="24.0" layoutY="212.0" prefHeight="218.0" prefWidth="280.0" style="-fx-border-style: solid; -fx-background-color: silver;">
+                     <children>
+                        <Button fx:id="button10" layoutX="183.0" layoutY="17.0" minWidth="50.0" mnemonicParsing="false" text="10" textFill="RED" AnchorPane.leftAnchor="183.0" AnchorPane.rightAnchor="47.0" />
+                        <Button fx:id="button9" layoutX="42.0" layoutY="17.0" minWidth="50.0" mnemonicParsing="false" text="9" textFill="RED" />
+                        <Button fx:id="button7" layoutX="42.0" layoutY="55.0" minWidth="50.0" mnemonicParsing="false" text="7" textFill="RED" />
+                        <Button fx:id="button8" layoutX="183.0" layoutY="55.0" minWidth="50.0" mnemonicParsing="false" text="8" textFill="RED" />
+                        <Button fx:id="button5" layoutX="42.0" layoutY="94.0" minWidth="50.0" mnemonicParsing="false" text="5" textFill="RED" />
+                        <Button fx:id="button6" layoutX="183.0" layoutY="94.0" minWidth="50.0" mnemonicParsing="false" text="6" textFill="RED" />
+                        <Button fx:id="button3" layoutX="42.0" layoutY="134.0" minWidth="50.0" mnemonicParsing="false" text="3" textFill="RED" />
+                        <Button fx:id="button4" layoutX="183.0" layoutY="134.0" minWidth="50.0" mnemonicParsing="false" text="4" textFill="RED" />
+                        <Button fx:id="button1" layoutX="42.0" layoutY="172.0" minWidth="50.0" mnemonicParsing="false" text="1" textFill="RED" />
+                        <Button fx:id="button2" layoutX="183.0" layoutY="172.0" minWidth="50.0" mnemonicParsing="false" text="2" textFill="RED" />
+                     </children>
+                  </AnchorPane>
                </children>
             </AnchorPane>
           <AnchorPane minWidth="200.0" prefHeight="100.0" prefWidth="160.0">
