--- a/src/ElSys/elsys.fxml
+++ b/src/ElSys/elsys.fxml
@@ -1,49 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.shape.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.paint.*?>
-<?import javafx.scene.control.*?>
 <?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.*?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.shape.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" style="-fx-background-color: Gray;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ElSys.Controller">
-   <children>
-      <BorderPane fx:id="buildingPane" minHeight="900.0" minWidth="760.0" prefHeight="900.0" prefWidth="761.0" style="-fx-background-color: White;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="330.0" AnchorPane.topAnchor="0.0" />
-      <SplitPane dividerPositions="0.5" layoutX="761.0" layoutY="-2.0" orientation="VERTICAL" prefHeight="611.0" prefWidth="246.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="761.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <items>
-          <AnchorPane minHeight="0.0" minWidth="325.0" prefHeight="100.0" prefWidth="160.0" style="-fx-background-color: gray;">
-               <children>
-                  <Label layoutX="119.0" layoutY="6.0" text="Elevator Controls" />
-                  <AnchorPane fx:id="cabinPane" layoutX="23.0" layoutY="32.0" prefHeight="157.0" prefWidth="280.0" style="-fx-background-color: Black;" />
-                  <AnchorPane layoutX="24.0" layoutY="212.0" prefHeight="218.0" prefWidth="280.0" style="-fx-border-style: solid; -fx-background-color: silver;">
-                     <children>
-                        <Button fx:id="button10" layoutX="183.0" layoutY="17.0" minWidth="50.0" mnemonicParsing="false" text="10" textFill="RED" AnchorPane.leftAnchor="183.0" AnchorPane.rightAnchor="47.0" />
-                        <Button fx:id="button9" layoutX="42.0" layoutY="17.0" minWidth="50.0" mnemonicParsing="false" text="9" textFill="RED" />
-                        <Button fx:id="button7" layoutX="42.0" layoutY="55.0" minWidth="50.0" mnemonicParsing="false" text="7" textFill="RED" />
-                        <Button fx:id="button8" layoutX="183.0" layoutY="55.0" minWidth="50.0" mnemonicParsing="false" text="8" textFill="RED" />
-                        <Button fx:id="button5" layoutX="42.0" layoutY="94.0" minWidth="50.0" mnemonicParsing="false" text="5" textFill="RED" />
-                        <Button fx:id="button6" layoutX="183.0" layoutY="94.0" minWidth="50.0" mnemonicParsing="false" text="6" textFill="RED" />
-                        <Button fx:id="button3" layoutX="42.0" layoutY="134.0" minWidth="50.0" mnemonicParsing="false" text="3" textFill="RED" />
-                        <Button fx:id="button4" layoutX="183.0" layoutY="134.0" minWidth="50.0" mnemonicParsing="false" text="4" textFill="RED" />
-                        <Button fx:id="button1" layoutX="42.0" layoutY="172.0" minWidth="50.0" mnemonicParsing="false" text="1" textFill="RED" />
-                        <Button fx:id="button2" layoutX="183.0" layoutY="172.0" minWidth="50.0" mnemonicParsing="false" text="2" textFill="RED" />
-                     </children>
-                  </AnchorPane>
-               </children>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" style="-fx-background-color: Gray;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="ElSys.Controller">
+  <children>
+    <BorderPane fx:id="buildingPane" minHeight="900.0" minWidth="760.0" prefHeight="900.0" prefWidth="761.0" style="-fx-background-color: White;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="330.0" AnchorPane.topAnchor="0.0" />
+    <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="611.0" prefWidth="246.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="761.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <items>
+        <AnchorPane minHeight="0.0" minWidth="325.0" prefHeight="100.0" prefWidth="160.0" style="-fx-background-color: gray;">
+          <children>
+            <Label layoutX="119.0" layoutY="6.0" text="Elevator Controls" />
+            <AnchorPane fx:id="cabinPane" layoutX="23.0" layoutY="32.0" prefHeight="157.0" prefWidth="280.0" style="-fx-background-color: Black;" />
+            <AnchorPane focusTraversable="true" layoutX="24.0" layoutY="212.0" prefHeight="218.0" prefWidth="280.0" style="-fx-border-style: solid; -fx-background-color: silver;">
+              <children>
+                <Button fx:id="button10" layoutY="17.0" minWidth="50.0" mnemonicParsing="false" text="10" textFill="RED" AnchorPane.leftAnchor="183.0" AnchorPane.rightAnchor="47.0" />
+                <Button fx:id="button9" layoutX="42.0" layoutY="17.0" minWidth="50.0" mnemonicParsing="false" text="9" textFill="RED" />
+                <Button fx:id="button7" layoutX="42.0" layoutY="55.0" minWidth="50.0" mnemonicParsing="false" text="7" textFill="RED" />
+                <Button fx:id="button8" layoutX="183.0" layoutY="55.0" minWidth="50.0" mnemonicParsing="false" text="8" textFill="RED" />
+                <Button fx:id="button5" layoutX="42.0" layoutY="94.0" minWidth="50.0" mnemonicParsing="false" text="5" textFill="RED" />
+                <Button fx:id="button6" layoutX="183.0" layoutY="94.0" minWidth="50.0" mnemonicParsing="false" text="6" textFill="RED" />
+                <Button fx:id="button3" layoutX="42.0" layoutY="134.0" minWidth="50.0" mnemonicParsing="false" text="3" textFill="RED" />
+                <Button fx:id="button4" layoutX="183.0" layoutY="134.0" minWidth="50.0" mnemonicParsing="false" text="4" textFill="RED" />
+                <Button fx:id="button1" defaultButton="false" focusTraversable="true" layoutX="42.0" layoutY="172.0" minWidth="50.0" mnemonicParsing="false" text="1" textFill="RED" />
+                <Button fx:id="button2" layoutX="183.0" layoutY="172.0" minWidth="50.0" mnemonicParsing="false" text="2" textFill="RED" />
+              </children>
             </AnchorPane>
-          <AnchorPane minWidth="200.0" prefHeight="100.0" prefWidth="160.0">
-               <children>
-                  <ComboBox fx:id="elevatorCombo" layoutX="89.0" layoutY="52.0" onAction="#selectElevator" prefWidth="150.0" promptText="Elevator" AnchorPane.topAnchor="52.0" />
-                  <Label layoutX="108.0" layoutY="14.0" text="Master Control Panel" />
-                  <Button layoutX="89.0" layoutY="127.0" minWidth="53.0" mnemonicParsing="false" onAction="#lock" text="Lock" />
-                  <Button layoutX="187.0" layoutY="127.0" minWidth="53.0" mnemonicParsing="false" onAction="#unlock" text="Unlock" />
-               </children></AnchorPane>
-        </items>
-      </SplitPane>
-   </children>
+          </children>
+        </AnchorPane>
+        <AnchorPane minWidth="200.0" prefHeight="100.0" prefWidth="160.0">
+          <children>
+            <ComboBox fx:id="elevatorCombo" layoutX="89.0" onAction="#selectElevator" prefWidth="150.0" promptText="Elevator" AnchorPane.topAnchor="52.0" />
+            <Label layoutX="108.0" layoutY="14.0" text="Master Control Panel" />
+            <Button layoutX="89.0" layoutY="127.0" minWidth="53.0" mnemonicParsing="false" onAction="#lock" text="Lock" />
+            <Button layoutX="187.0" layoutY="127.0" minWidth="53.0" mnemonicParsing="false" onAction="#unlock" text="Unlock" />
+          </children>
+        </AnchorPane>
+      </items>
+    </SplitPane>
+  </children>
 </AnchorPane>
