--- a/src/ElSys/elsys.fxml
+++ b/src/ElSys/elsys.fxml
@@ -19,8 +19,8 @@
         <AnchorPane minHeight="0.0" minWidth="325.0" prefHeight="100.0" prefWidth="160.0" style="-fx-background-color: gray;">
           <children>
             <Label layoutX="119.0" layoutY="6.0" text="Elevator Controls" />
-            <AnchorPane fx:id="cabinPane" layoutX="23.0" layoutY="32.0" prefHeight="157.0" prefWidth="280.0" style="-fx-background-color: Black;" />
-            <AnchorPane focusTraversable="true" layoutX="24.0" layoutY="212.0" prefHeight="218.0" prefWidth="280.0" style="-fx-border-style: solid; -fx-background-color: silver;">
+            <AnchorPane fx:id="cabinPane" layoutX="24.0" layoutY="32.0" prefHeight="157.0" prefWidth="280.0" style="-fx-background-color: Black;" />
+            <AnchorPane fx:id="buttonPane" disable="false" focusTraversable="false" layoutX="24.0" layoutY="212.0" prefHeight="218.0" prefWidth="280.0" style="-fx-border-style: solid; -fx-background-color: silver;">
               <children>
                 <Button fx:id="button10" layoutY="17.0" minWidth="50.0" mnemonicParsing="false" text="10" textFill="RED" AnchorPane.leftAnchor="183.0" AnchorPane.rightAnchor="47.0" />
                 <Button fx:id="button9" layoutX="42.0" layoutY="17.0" minWidth="50.0" mnemonicParsing="false" text="9" textFill="RED" />
@@ -36,7 +36,7 @@
             </AnchorPane>
           </children>
         </AnchorPane>
-        <AnchorPane minWidth="200.0" prefHeight="100.0" prefWidth="160.0">
+        <AnchorPane focusTraversable="false" minWidth="200.0" prefHeight="100.0" prefWidth="160.0">
           <children>
             <ComboBox fx:id="elevatorCombo" layoutX="89.0" onAction="#selectElevator" prefWidth="150.0" promptText="Elevator" AnchorPane.topAnchor="52.0" />
             <Label layoutX="108.0" layoutY="14.0" text="Master Control Panel" />
