--- a/src/ElSys/elsys.fxml
+++ b/src/ElSys/elsys.fxml
@@ -20,7 +20,7 @@
           <children>
             <Label layoutX="119.0" layoutY="6.0" text="Elevator Controls" />
             <AnchorPane fx:id="cabinPane" layoutX="24.0" layoutY="32.0" prefHeight="157.0" prefWidth="280.0" style="-fx-background-color: Black;" />
-            <AnchorPane fx:id="buttonPane" disable="false" focusTraversable="false" layoutX="24.0" layoutY="212.0" prefHeight="218.0" prefWidth="280.0" style="-fx-border-style: solid; -fx-background-color: silver;">
+            <AnchorPane id="buttonPane" disable="false" focusTraversable="false" layoutX="24.0" layoutY="212.0" prefHeight="218.0" prefWidth="280.0" style="-fx-border-style: solid; -fx-background-color: silver;">
               <children>
                 <Button fx:id="button10" layoutY="17.0" minWidth="50.0" mnemonicParsing="false" text="10" textFill="RED" AnchorPane.leftAnchor="183.0" AnchorPane.rightAnchor="47.0" />
                 <Button fx:id="button9" layoutX="42.0" layoutY="17.0" minWidth="50.0" mnemonicParsing="false" text="9" textFill="RED" />
@@ -40,13 +40,15 @@
           <children>
             <ComboBox fx:id="elevatorCombo" layoutX="89.0" onAction="#selectElevator" prefWidth="150.0" promptText="Elevator" AnchorPane.topAnchor="52.0" />
             <Label layoutX="108.0" layoutY="14.0" text="Master Control Panel" />
-            <Button layoutX="89.0" layoutY="127.0" minWidth="53.0" mnemonicParsing="false" onAction="#lock" text="Lock" />
-            <Button layoutX="187.0" layoutY="127.0" minWidth="53.0" mnemonicParsing="false" onAction="#unlock" text="Unlock" />
+            <AnchorPane fx:id="doorPane" prefHeight="275.0" prefWidth="301.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="13.0" AnchorPane.topAnchor="157.0" />
+            <Button layoutX="89.0" layoutY="83.0" mnemonicParsing="false" prefWidth="150.0" text="Show Door" textAlignment="LEFT" />
+            <Button layoutX="75.0" layoutY="129.0" minWidth="57.0" mnemonicParsing="false" onAction="#lock" text="Lock" />
+            <Button layoutX="197.0" layoutY="129.0" minWidth="53.0" mnemonicParsing="false" onAction="#unlock" text="Unlock" />
           </children>
         </AnchorPane>
       </items>
     </SplitPane>
-    <AnchorPane fx:id="floorButtonPane" disable="false" focusTraversable="false" layoutX="683.5" layoutY="5.0" prefHeight="700.0" prefWidth="75.0" style="-fx-border-style: solid; -fx-background-color: silver;">
+    <AnchorPane fx:id="floorButtonPane" disable="false" focusTraversable="false" layoutX="684.0" layoutY="5.0" prefHeight="794.0" prefWidth="75.0" style="-fx-border-style: solid; -fx-background-color: silver;">
       <children>
         <Button fx:id="upbutton10" layoutX="20.0" layoutY="15.0" minWidth="35.0" mnemonicParsing="false" text="Fire" textFill="RED" />
         <Button fx:id="upbutton9" layoutX="20.0" layoutY="95.0" minWidth="35.0" mnemonicParsing="false" text="9" textFill="RED" />
@@ -58,7 +60,6 @@
         <Button fx:id="upbutton4" layoutX="20.0" layoutY="495.0" minWidth="35.0" mnemonicParsing="false" text="4" textFill="RED" />
         <Button fx:id="upbutton1" defaultButton="false" focusTraversable="true" layoutX="20.0" layoutY="735.0" minWidth="35.0" mnemonicParsing="false" text="1" textFill="RED" />
         <Button fx:id="upbutton2" layoutX="20.0" layoutY="655.0" minWidth="35.0" mnemonicParsing="false" text="2" textFill="RED" />
-
         <Button fx:id="downbutton10" layoutX="20.0" layoutY="45.0" minWidth="35.0" mnemonicParsing="false" text="10" textFill="RED" />
         <Button fx:id="downbutton9" layoutX="20.0" layoutY="125.0" minWidth="35.0" mnemonicParsing="false" text="9" textFill="RED" />
         <Button fx:id="downbutton7" layoutX="20.0" layoutY="285.0" minWidth="35.0" mnemonicParsing="false" text="7" textFill="RED" />
