--- a/src/ElSys/elsys.fxml
+++ b/src/ElSys/elsys.fxml
@@ -32,6 +32,7 @@
                 <Button fx:id="button4" layoutX="183.0" layoutY="134.0" minWidth="50.0" mnemonicParsing="false" text="4" textFill="RED" />
                 <Button fx:id="button1" defaultButton="false" focusTraversable="true" layoutX="42.0" layoutY="172.0" minWidth="50.0" mnemonicParsing="false" text="1" textFill="RED" />
                 <Button fx:id="button2" layoutX="183.0" layoutY="172.0" minWidth="50.0" mnemonicParsing="false" text="2" textFill="RED" />
+                <Label layoutX="116.0" layoutY="177.0" text="Key Here" />
               </children>
             </AnchorPane>
           </children>
@@ -40,10 +41,12 @@
           <children>
             <ComboBox fx:id="elevatorCombo" layoutX="89.0" onAction="#selectElevator" prefWidth="150.0" promptText="Elevator" AnchorPane.topAnchor="52.0" />
             <Label layoutX="108.0" layoutY="14.0" text="Master Control Panel" />
-            <AnchorPane fx:id="doorPane" prefHeight="275.0" prefWidth="301.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="13.0" AnchorPane.topAnchor="157.0" />
+            <AnchorPane fx:id="doorPane" layoutX="12.0" prefHeight="275.0" prefWidth="301.0" style=" -fx-background-color: black;" AnchorPane.bottomAnchor="10.0" AnchorPane.topAnchor="161.0" />
             <Button layoutX="89.0" layoutY="83.0" mnemonicParsing="false" prefWidth="150.0" text="Show Door" textAlignment="LEFT" />
             <Button layoutX="75.0" layoutY="129.0" minWidth="57.0" mnemonicParsing="false" onAction="#lock" text="Lock" />
             <Button layoutX="197.0" layoutY="129.0" minWidth="53.0" mnemonicParsing="false" onAction="#unlock" text="Unlock" />
+            <Label layoutX="16.0" layoutY="72.0" text="Alarm here" />
+            <Label layoutX="254.0" layoutY="72.0" text="Alarm here" />
           </children>
         </AnchorPane>
       </items>
