--- a/src/ElSys/elsys.fxml
+++ b/src/ElSys/elsys.fxml
@@ -32,7 +32,7 @@
                 <Button fx:id="button4" layoutX="183.0" layoutY="134.0" minWidth="50.0" mnemonicParsing="false" text="4" textFill="RED" />
                 <Button fx:id="button1" defaultButton="false" focusTraversable="true" layoutX="42.0" layoutY="172.0" minWidth="50.0" mnemonicParsing="false" text="1" textFill="RED" />
                 <Button fx:id="button2" layoutX="183.0" layoutY="172.0" minWidth="50.0" mnemonicParsing="false" text="2" textFill="RED" />
-                <Label layoutX="116.0" layoutY="177.0" text="Key Here" />
+                <Button fx:id="maintenanceKey" layoutX="121.25" layoutY="172.0" minHeight="35.0" minWidth="35.0" mnemonicParsing="false" />
               </children>
             </AnchorPane>
           </children>
