--- a/src/ElSys/elsys.fxml
+++ b/src/ElSys/elsys.fxml
@@ -3,6 +3,7 @@
 <?import java.lang.*?>
 <?import javafx.geometry.*?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -45,8 +46,8 @@
             <Button layoutX="89.0" layoutY="83.0" mnemonicParsing="false" prefWidth="150.0" text="Show Door" textAlignment="LEFT" />
             <Button layoutX="75.0" layoutY="129.0" minWidth="57.0" mnemonicParsing="false" onAction="#lock" text="Lock" />
             <Button layoutX="197.0" layoutY="129.0" minWidth="53.0" mnemonicParsing="false" onAction="#unlock" text="Unlock" />
-            <Label layoutX="16.0" layoutY="72.0" text="Alarm here" />
-            <Label layoutX="254.0" layoutY="72.0" text="Alarm here" />
+            <Button fx:id="fireImage1" layoutX="16.0" layoutY="57.0" prefHeight="55.0" prefWidth="55.0"/>
+            <Button fx:id="fireImage2" layoutX="254.0" layoutY="57.0" prefHeight="55.0" prefWidth="55.0"/>
           </children>
         </AnchorPane>
       </items>
