--- a/src/ElSys/elsys.fxml
+++ b/src/ElSys/elsys.fxml
@@ -3,16 +3,16 @@
 <?import java.lang.*?>
 <?import javafx.geometry.*?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.shape.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" style="-fx-background-color: Gray;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ElSys.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" style="-fx-background-color: Gray;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="ElSys.Controller">
   <children>
     <BorderPane fx:id="buildingPane" minHeight="900.0" minWidth="760.0" prefHeight="900.0" prefWidth="761.0" style="-fx-background-color: White;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="330.0" AnchorPane.topAnchor="0.0" />
     <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="611.0" prefWidth="246.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="761.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -33,7 +33,7 @@
                 <Button fx:id="button4" layoutX="183.0" layoutY="134.0" minWidth="50.0" mnemonicParsing="false" text="4" textFill="RED" />
                 <Button fx:id="button1" defaultButton="false" focusTraversable="true" layoutX="42.0" layoutY="172.0" minWidth="50.0" mnemonicParsing="false" text="1" textFill="RED" />
                 <Button fx:id="button2" layoutX="183.0" layoutY="172.0" minWidth="50.0" mnemonicParsing="false" text="2" textFill="RED" />
-                <Button fx:id="maintenanceKey" layoutX="121.25" layoutY="172.0" minHeight="35.0" minWidth="35.0" mnemonicParsing="false" />
+                <Button fx:id="maintenanceKey" layoutX="123.0" layoutY="165.0" minHeight="35.0" minWidth="35.0" mnemonicParsing="false" />
               </children>
             </AnchorPane>
           </children>
@@ -42,11 +42,11 @@
           <children>
             <ComboBox fx:id="elevatorCombo" layoutX="89.0" onAction="#selectElevator" prefWidth="150.0" promptText="Elevator" AnchorPane.topAnchor="52.0" />
             <Label layoutX="95.0" layoutY="14.0" text="Master Control Panel" />
-            <AnchorPane fx:id="doorPane" layoutX="12.0" layoutY="119.0" prefHeight="316.0" prefWidth="301.0" style=" -fx-background-color: black;" AnchorPane.bottomAnchor="10.0" AnchorPane.topAnchor="119.0" />
+            <AnchorPane fx:id="doorPane" layoutX="12.0" prefHeight="316.0" prefWidth="301.0" style=" -fx-background-color: black;" AnchorPane.bottomAnchor="10.0" AnchorPane.topAnchor="119.0" />
             <Button layoutX="89.0" layoutY="85.0" minWidth="57.0" mnemonicParsing="false" onAction="#lock" text="Lock" />
-            <Button layoutX="176.0" layoutY="85.0" minWidth="53.0" mnemonicParsing="false" onAction="#unlock" text="Unlock" />
-            <Button fx:id="fireImage1" layoutX="14.0" layoutY="50.0" prefHeight="61.0" prefWidth="55.0" style="-fx-background-color: RED;" />
-            <Button fx:id="fireImage2" layoutX="258.0" layoutY="50.0" prefHeight="61.0" prefWidth="55.0" style="-fx-background-color: RED;" />
+            <Button layoutX="182.0" layoutY="85.0" minWidth="53.0" mnemonicParsing="false" onAction="#unlock" text="Unlock" />
+            <Button fx:id="fireImage1" layoutX="14.0" layoutY="50.0" prefHeight="61.0" prefWidth="55.0" style="" />
+            <Button fx:id="fireImage2" layoutX="258.0" layoutY="50.0" prefHeight="61.0" prefWidth="55.0" style="" />
           </children>
         </AnchorPane>
       </items>
